Anonymous | Login | 2021-01-24 06:04 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0029910 | Open CASCADE | [OCCT] OCCT:Modeling Algorithms | public | 2018-06-29 14:57 | 2020-10-22 10:44 | ||||||||
Reporter | bugmaster | ||||||||||||
Assigned To | msv | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | assigned | Resolution | fixed | ||||||||||
Platform | Debian 80 64 bit | OS | OS Version | ||||||||||
Product Version | |||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0029910: Porting to Debian80-64 : Regressions in Modeling Algorithms | ||||||||||||
Description | Source: http://jenkins-test-12.nnov.opencascade.com/view/JT-12/ [^] Test cases: bugs modalg_7 bug28119_1 bugs modalg_7 bug28131 Station : debian8-03 | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | ![]() | ||||||||||||
![]() |
|||||||||||||||||||
|
![]() |
|
(0077305) msv (developer) 2018-07-06 10:47 |
Dear Nikolay, this bug shows instability related to different compiler. Could you trace the difference to understand the root of the problem? |
(0077685) git (administrator) 2018-07-16 18:04 |
Branch CR29910 has been created by nbv. SHA-1: 62a73026c040678b4353ee4d6926bf4adaa8bba5 Detailed log of new commits: Author: nbv Date: Mon Jul 16 15:32:23 2018 +0300 0029910: Porting to Debian80-64 : Regressions in Modeling Algorithms The algorithm of choice of isoline (while surface-surface intersecting) has become more platform independent. |
(0077696) bugmaster (administrator) 2018-07-17 09:54 |
bugs modalg_7 bug28119_1 regression is disappears http://occt-tests/JT-12-WEEK29-OCCT/Debian80-64/summary.html [^] |
(0077726) git (administrator) 2018-07-17 13:25 |
Branch CR29910 has been updated forcibly by nbv. SHA-1: 9e2cd603973fc0c3f0f0dccf6ad2b5c9238e2c02 |
(0077811) git (administrator) 2018-07-19 12:08 |
Branch CR29910 has been updated forcibly by nbv. SHA-1: 867a40cf6f68815957c75a7ac84d0b0321300e61 |
(0077814) git (administrator) 2018-07-19 13:19 |
Branch CR29910 has been updated forcibly by nbv. SHA-1: 59b01d98228023a0cacdd2ba93f0b72e51567412 |
(0077818) git (administrator) 2018-07-19 13:58 |
Branch CR29910 has been updated forcibly by nbv. SHA-1: 14b218e6086e9cd05e0606eee402a65deb52efff |
(0077859) git (administrator) 2018-07-20 17:06 |
Branch CR29910 has been updated forcibly by nbv. SHA-1: 2eb206bc612fd4d8f4dec238c3b7f773d7a7ac83 |
(0077937) git (administrator) 2018-07-23 17:47 |
Branch CR29910 has been updated forcibly by nbv. SHA-1: 50c8e228e984125a7f39c7e84c769b7b675d1062 |
(0077956) git (administrator) 2018-07-24 11:27 |
Branch CR29910 has been updated forcibly by nbv. SHA-1: 67a74065a9037541c162229cbad3ca324559d85f |
(0077964) git (administrator) 2018-07-24 16:14 |
Branch CR29910 has been updated forcibly by nbv. SHA-1: 9278da44667a82550f7ebadd3010b87de9b6adf4 |
(0077990) git (administrator) 2018-07-25 12:02 |
Branch CR29910 has been updated forcibly by nbv. SHA-1: f96f22d42efccfdeb20039400eee579b0351c003 |
(0077995) git (administrator) 2018-07-25 14:45 |
Branch CR29910 has been updated by nbv. SHA-1: e8cae9bbf12adc647b16091a79442dcf408bc50b Detailed log of new commits: Author: nbv Date: Wed Jul 25 13:49:57 2018 +0300 Temporary commit |
(0078086) git (administrator) 2018-07-27 13:06 |
Branch CR29910 has been updated forcibly by nbv. SHA-1: a7b7670a5d9a2aeecb084f5076413e5fe67c793e |
(0078113) git (administrator) 2018-07-27 18:12 |
Branch CR29910 has been updated forcibly by nbv. SHA-1: fc5b1bf32a846e0d8f417451e98a6ee97d74a917 |
(0078114) git (administrator) 2018-07-27 19:13 |
Branch CR29910 has been updated forcibly by nbv. SHA-1: 20415544d6f35a1800d828dfa65146bb1aeb9f6e |
(0078205) git (administrator) 2018-07-30 18:03 |
Branch CR29910 has been updated forcibly by nbv. SHA-1: fd4f69b70fb68516d0178cc73c3cd0fe8a255149 |
(0078223) git (administrator) 2018-07-31 10:52 |
Branch CR29910 has been updated forcibly by nbv. SHA-1: 37980e5700f5d5f12a146e0c313173ab2c1de0f6 |
(0078327) git (administrator) 2018-08-02 16:25 |
Branch CR29910 has been updated forcibly by nbv. SHA-1: afc786096f843c7077eb178cfbc755aa42b06b13 |
(0078342) nbv (developer) 2018-08-03 11:12 |
DC, Test "bugs modalg_7 bug28131" is stable on all platforms. Making the test "bugs modalg_7 bug28119_1" stable requires serious development. The main problem is in intersection algorithm. Namely in the function IntImp_ComputeTangence(...) (see src/IntImp/IntImp_ComputeTangence.cxx file). This function is responsible for choosing isoline, along which the WLine will go. And this algorithm is really unstable in cases when two surfaces are almost tangent. It means that by the reason of numerical instability WLine can go in significantly different direction (see the message ~77421). All attempts to make choice of direction more platform independent (by entering some tolerance, what were made in many fixes) led to additional regressions. I.e. in the places where WLIne shall curve, after the fix it continuous its direction. I have attached the new version of the file IntImp_ComputeTangence.cxx. There, the algorithm of iso-line choosing has been rewritten and (in my opinion) is more logical. However, currently it cannot be implemented because it requires rewriting IntWalk_PWalking algorithm completely. Namely, redefinition of minimal and maximal step of WLine, maximal deflection, angle of WLine rotation and many other criteria; revision of all statuses (enumerated in IntWalk_StatusDeflection.hxx file). Maybe, returning to this question will be possible after the fix #23914. Conclusion! Currently it is better to mark the test "bugs modalg_7 bug28119_1" as really unstable. Maybe in the future this instability will be fixed by some changes in fillet algorithm but here I repeat that the main reason of the current instability is in intersection algorithm and its fixing requires serious development. |
(0078345) git (administrator) 2018-08-03 11:47 |
Branch CR29910_1 has been created by nbv. SHA-1: 723a9ef0104db33869dd5d4c567a3c119fba803f Detailed log of new commits: Author: nbv Date: Mon Jul 16 15:32:23 2018 +0300 0029910: Porting to Debian80-64 : Regressions in Modeling Algorithms Adjusting test cases. Creation of new test cases. |
(0078350) git (administrator) 2018-08-03 13:34 |
Branch CR29910_1 has been updated by nbv. SHA-1: 922d11eeff208b56c3ae112a0b9ce6e8d20b6248 Detailed log of new commits: Author: nbv Date: Fri Aug 3 13:32:32 2018 +0300 Adjusting test cases. |
(0078351) git (administrator) 2018-08-03 13:41 |
Branch CR29910_1 has been updated forcibly by nbv. SHA-1: 8a488d28297093c284cf03168c7181d3ab806975 |
(0078359) git (administrator) 2018-08-03 15:01 |
Branch CR29910_1 has been updated by nbv. SHA-1: 603ba8a2379f9e2119199e072fd192e27495c11a Detailed log of new commits: Author: nbv Date: Fri Aug 3 14:58:26 2018 +0300 # Adjusting test cases. |
(0078362) git (administrator) 2018-08-03 15:31 |
Branch CR29910_1 has been updated by nbv. SHA-1: 15955c6b86930a4072b6391c59db270ee8d690a6 Detailed log of new commits: Author: nbv Date: Fri Aug 3 15:29:46 2018 +0300 # Adjusting test cases. |
(0078418) git (administrator) 2018-08-06 10:59 |
Branch CR29910_1 has been updated forcibly by nbv. SHA-1: 1af4a187c3930392f8932751d81e95045e13de34 |
(0078455) git (administrator) 2018-08-07 11:48 |
Branch CR29910_1 has been updated forcibly by nbv. SHA-1: e6e10d3805e71c7b986898e4c42bdc2276da13b4 |
(0078463) git (administrator) 2018-08-07 14:07 |
Branch CR29910_1_jt12 has been created by nbv. SHA-1: b4f3a5289dbc1fe7de8354c1ed4ffef25b6c38da Detailed log of new commits: Author: nbv Date: Mon Jul 16 15:32:23 2018 +0300 0029910: Porting to Debian80-64 : Regressions in Modeling Algorithms Adjusting test cases. Creation of new test cases. |
(0078473) git (administrator) 2018-08-07 17:41 |
Branch CR29910_1_jt12 has been updated by nbv. SHA-1: 7eee70fcab05df92e82d7ee2a6f894b671ed0090 Detailed log of new commits: Author: nbv Date: Tue Aug 7 17:39:52 2018 +0300 # Correction in test case. |
(0078474) git (administrator) 2018-08-07 17:46 |
Branch CR29910_1_jt12 has been updated forcibly by nbv. SHA-1: e7d37817c24ecb1dd983cfc2b3b2dcd3b0edd371 |
(0078481) nbv (developer) 2018-08-08 10:24 |
Some addition to the message 0029910:0078342. Currently there are no good fix to eliminate unstable behavior. In the attached file "IntImp_ComputeTangence.cxx" the function IntImp_ComputeTangence(...) has been rewritten. But the behavior in the point of branching is unpredictable as before. Nevertheless I believe that the new algorithm can be stabilized easier by entering some tolerance (as I tried to do it with the current algorithm). This conclusion is based on the fact that the new behavior is (in my opinion) more logical and the intersection line has more chances to be continued even from the points with some "specialties". Maybe some another (3rd) criterion of iso-line choice will be more effective. But implementation of new algorithm requires revision all IntWalk_PWalking class and after implementation the behavior of intersection line in region near to the tangent zones will be significantly changed. |
(0078482) nbv (developer) 2018-08-08 10:25 |
Dear Bugmaster, Please keep this bug as open even after integration the branch with test cases into MASTER. |
(0078573) git (administrator) 2018-08-11 13:45 |
Branch CR29910_1_jt12 has been deleted by inv. SHA-1: e7d37817c24ecb1dd983cfc2b3b2dcd3b0edd371 |
(0078574) git (administrator) 2018-08-11 13:45 |
Branch CR29910_1 has been deleted by inv. SHA-1: e6e10d3805e71c7b986898e4c42bdc2276da13b4 |
(0078576) git (administrator) 2018-08-11 13:45 |
Branch CR29910 has been deleted by inv. SHA-1: afc786096f843c7077eb178cfbc755aa42b06b13 |
![]() |
|||
occt: master e121dd4d
Timestamp: 2018-07-16 12:32:23 Author: nbv Committer: bugmaster [ Details ] [ Diff ] |
0029910: Porting to Debian80-64 : Regressions in Modeling Algorithms Adjusting test cases. Creation of new test cases. |
||
mod - src/IntWalk/IntWalk_PWalking.lxx | [ Diff ] [ File ] | ||
mod - src/QABugs/QABugs_11.cxx | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_2/bug251_1 | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_2/bug251_2 | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_3/bug600 | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_7/bug28119_1 | [ Diff ] [ File ] | ||
mod - tests/bugs/modalg_7/bug28764 | [ Diff ] [ File ] | ||
add - tests/bugs/modalg_7/bug29910_1 | [ Diff ] [ File ] | ||
add - tests/bugs/modalg_7/bug29910_2 | [ Diff ] [ File ] | ||
mod - tests/bugs/moddata_2/bug333 | [ Diff ] [ File ] | ||
rm - tests/bugs/moddata_2/bug567 | [ Diff ] [ File ] | ||
add - tests/bugs/moddata_2/bug567_1 | [ Diff ] [ File ] | ||
add - tests/bugs/moddata_2/bug567_2 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2018-06-29 14:57 | bugmaster | New Issue | |
2018-06-29 14:57 | bugmaster | Assigned To | => msv |
2018-06-29 14:57 | bugmaster | Status | new => assigned |
2018-06-29 14:58 | bugmaster | Description Updated | View Revisions |
2018-06-29 14:59 | bugmaster | Relationship added | child of 0029907 |
2018-06-29 15:00 | bugmaster | Summary | Regressions on Debian 80 64 bit => Regressions in Modeling Algorithms on Debian 80 64 bit |
2018-07-05 12:32 | bugmaster | Summary | Regressions in Modeling Algorithms on Debian 80 64 bit => Porting to Debian80-64 : Regressions in Modeling Algorithms |
2018-07-06 10:47 | msv | Note Added: 0077305 | |
2018-07-06 10:47 | msv | Assigned To | msv => nbv |
2018-07-11 17:28 | nbv | Relationship added | parent of 0029948 |
2018-07-16 18:04 | git | Note Added: 0077685 | |
2018-07-17 09:54 | bugmaster | Note Added: 0077696 | |
2018-07-17 13:25 | git | Note Added: 0077726 | |
2018-07-19 12:08 | git | Note Added: 0077811 | |
2018-07-19 13:19 | git | Note Added: 0077814 | |
2018-07-19 13:58 | git | Note Added: 0077818 | |
2018-07-20 17:06 | git | Note Added: 0077859 | |
2018-07-23 17:47 | git | Note Added: 0077937 | |
2018-07-24 11:27 | git | Note Added: 0077956 | |
2018-07-24 16:14 | git | Note Added: 0077964 | |
2018-07-25 12:02 | git | Note Added: 0077990 | |
2018-07-25 14:45 | git | Note Added: 0077995 | |
2018-07-27 13:06 | git | Note Added: 0078086 | |
2018-07-27 18:12 | git | Note Added: 0078113 | |
2018-07-27 19:13 | git | Note Added: 0078114 | |
2018-07-30 18:03 | git | Note Added: 0078205 | |
2018-07-31 10:52 | git | Note Added: 0078223 | |
2018-08-02 16:25 | git | Note Added: 0078327 | |
2018-08-03 11:12 | nbv | Note Added: 0078342 | |
2018-08-03 11:14 | nbv | File Added: IntImp_ComputeTangence.cxx | |
2018-08-03 11:15 | nbv | Relationship added | related to 0023914 |
2018-08-03 11:30 | nbv | Relationship added | related to 0028119 |
2018-08-03 11:47 | git | Note Added: 0078345 | |
2018-08-03 13:34 | git | Note Added: 0078350 | |
2018-08-03 13:41 | git | Note Added: 0078351 | |
2018-08-03 15:01 | git | Note Added: 0078359 | |
2018-08-03 15:31 | git | Note Added: 0078362 | |
2018-08-06 10:59 | git | Note Added: 0078418 | |
2018-08-06 17:12 | nbv | Relationship added | related to 0030018 |
2018-08-07 11:48 | git | Note Added: 0078455 | |
2018-08-07 14:07 | git | Note Added: 0078463 | |
2018-08-07 17:41 | git | Note Added: 0078473 | |
2018-08-07 17:46 | git | Note Added: 0078474 | |
2018-08-08 10:24 | nbv | Note Added: 0078481 | |
2018-08-08 10:25 | nbv | Note Added: 0078482 | |
2018-08-11 13:14 | bugmaster | Changeset attached | => occt master e121dd4d |
2018-08-11 13:14 | bugmaster | Assigned To | nbv => bugmaster |
2018-08-11 13:14 | bugmaster | Status | assigned => verified |
2018-08-11 13:14 | bugmaster | Resolution | open => fixed |
2018-08-11 13:45 | git | Note Added: 0078573 | |
2018-08-11 13:45 | git | Note Added: 0078574 | |
2018-08-11 13:45 | git | Note Added: 0078576 | |
2018-08-13 10:45 | bugmaster | Status | verified => closed |
2018-08-13 10:45 | bugmaster | Assigned To | bugmaster => nbv |
2018-08-13 10:45 | bugmaster | Status | closed => assigned |
2019-08-12 19:08 | msv | Assigned To | nbv => msv |
2019-08-12 19:15 | msv | Target Version | 7.4.0 => 7.5.0 |
2020-09-14 22:53 | msv | Target Version | 7.5.0 => 7.6.0* |
2020-10-22 10:44 | msv | Relationship added | related to 0031870 |
Copyright © 2000 - 2021 MantisBT Team |