0029910: Porting to Debian80-64 : Regressions in Modeling Algorithms

Adjusting test cases.
Creation of new test cases.